# Camera_ToolBox

./: .gitignore  Cargo.toml  README.md  build.sh  vcpkg.json
.ai_doc/plans/: 20260710_151745__camera_toolbox_foundation.md  20260710_160740__local_raw_foundation.md
.cargo/: config.toml
.github/opencv5/: OpenCVDependency.cmake  package.py
.github/opencv5/patches/: 0001-core-define-output-array-fit-overloads.patch
.github/opencv5/smoke/cpp/: CMakeLists.txt  main.cpp
.github/opencv5/smoke/rust/: Cargo.toml
.github/opencv5/smoke/rust/src/: main.rs
.github/workflows/: ci.yml  ffmpeg-deps.yml  opencv5-deps.yml  release.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: calibration.rs  image_codec.rs  lib.rs  local_raw.rs  platform_registry.rs  synthetic.rs
crates/adapters/src/filesystem/: local.rs  mod.rs  monitor.rs  sftp.rs
crates/adapters/src/media/: ffmpeg_decoder.rs  ffmpeg_rtsp.rs  mod.rs  rtsp_stream_service.rs
crates/adapters/tests/: image_open_pipeline.rs
crates/adapters/tests/data/: chessboard_11x8_clean.json
crates/app/: Cargo.toml
crates/app/src/: asset.rs  calibration.rs  export.rs  lib.rs  workflow.rs
crates/app/src/filesystem/: auto_open.rs  mod.rs  model.rs  monitor.rs  ports.rs  settings.rs
crates/app/src/image_io/: mod.rs
crates/app/src/platform/: capability.rs  controller.rs  eeprom.rs  events.rs  mod.rs  ports.rs  profile.rs  profile_store.rs  remote.rs  snapshot.rs
crates/app/src/ports/: artifact.rs  calibration.rs  image.rs  mod.rs  raw.rs  sensor.rs
crates/app/src/raw_open/: mod.rs  pipeline.rs  preset.rs  source_cache.rs
crates/core/: Cargo.toml
crates/core/src/: analysis.rs  asset.rs  calibration.rs  calibration_eeprom.rs  calibration_yaml.rs  color.rs  image.rs  image_analysis.rs  lib.rs  raw.rs  raw_packing.rs  raw_probe.rs  yuv.rs
crates/core/src/sensor/: exposure.rs  mod.rs  profile.rs  types.rs
crates/eeprom-helper/: Cargo.toml
crates/eeprom-helper/src/: device_lock.rs  engine.rs  linux_i2c.rs  main.rs
crates/ffmpeg-bridge/: Cargo.toml
crates/ffmpeg-bridge/src/: lib.rs
crates/frontends/cli/: Cargo.toml
crates/frontends/cli/src/: cli.rs  json.rs  lib.rs  main.rs  platform.rs
crates/frontends/cli/tests/: frontend_contract.rs  terminal_exit.rs
crates/frontends/gui/: Cargo.toml
crates/frontends/gui/src/: analysis_panel.rs  analysis_worker.rs  app.rs  app_tests.rs  auto_open.rs  calibration_eeprom.rs  calibration_pipeline.rs  calibration_workspace.rs  color_controls.rs  color_worker.rs  explorer.rs  export_dialog.rs  histogram_link.rs  image_save.rs  main.rs  notification.rs  raw_dialog.rs  raw_inspector.rs  viewer.rs  yuv_dialog.rs  yuv_inspector.rs
crates/frontends/gui/src/explorer/: browser.rs  mod.rs  remote.rs  tests.rs
crates/frontends/gui/src/platform_ui/: device_manager.rs  host_key_worker.rs  live_runtime.rs  live_runtime_tests.rs  mod.rs  profile_commit.rs  ssh_profile.rs  ssh_profile_path.rs  ssh_profile_tests.rs  ssh_runtime.rs  stream_panel.rs
crates/frontends/gui/src/viewer/: hover.rs  interaction.rs  mod.rs  model.rs
crates/frontends/gui/src/workspace/: asset_document.rs  document.rs  image_document.rs  live_document.rs  mod.rs  resources.rs  tabs.rs
crates/frontends/gui/tests/: frontend_contract.rs  terminal_exit.rs
crates/frontends/tui/: Cargo.toml
crates/frontends/tui/src/: args.rs  lib.rs  main.rs  production.rs  state.rs  terminal.rs  tests.rs  ui.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
docs/: architecture.md  camera-intrinsic-calibration.md  isp-image-quality-evaluation.md  rdk-x5-camera-capture.md  roadmap.md  rust-for-cpp-sensor-design.md
scripts/: ffmpeg_dependency.py  opencv5_dependency.py  test_ffmpeg_dependency.py
