[workspace]
members = [
    "crates/core",
    "crates/app",
    "crates/adapters",
    "crates/logging",
    "crates/frontends/cli",
    "crates/frontends/tui",
    "crates/frontends/gui",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui_plot = "0.36"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
directories = "6.0"
serde_json = "1.0"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

camera-toolbox-core = { path = "crates/core" }
camera-toolbox-app = { path = "crates/app" }
camera-toolbox-adapters = { path = "crates/adapters" }
camera-toolbox-logging = { path = "crates/logging" }

# Cargo 不支持项目级默认 profile；让普通 build/run 采用 release 等价代码生成。
[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
