[workspace]
members = [
    "crates/core",
    "crates/app",
    "crates/adapters",
    "crates/logging",
    "crates/frontends/cli",
    "crates/frontends/gui",
    "crates/eeprom-helper",
    "crates/ffmpeg-bridge",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui_plot = "0.36"
egui_extras = "0.35"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
socket2 = "0.5"
thiserror = "2.0"
tracing = "0.1"
directories = "6.0"
serde_json = "1.0"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
png = "0.17"
fs2 = "0.4.3"
i2cdev = "0.6.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
opencv = { version = "=0.99.0", default-features = false, features = [
    "calib",
    "clang-runtime",
    "geometry",
    "imgcodecs",
    "imgproc",
    "objdetect",
] }
notify = "8.2"
ffmpeg-next = { version = "=8.1.0", default-features = false, features = ["codec", "format", "software-scaling"] }
russh = { version = "0.62", default-features = false, features = ["ring", "rsa"] }
russh-sftp = "2.3"
secrecy = "0.10"
tokio = { version = "1.52", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

camera-toolbox-core = { path = "crates/core" }
camera-toolbox-app = { path = "crates/app" }
camera-toolbox-logging = { path = "crates/logging" }
camera-toolbox-adapters = { path = "crates/adapters", default-features = false }
camera-toolbox-ffmpeg-bridge = { path = "crates/ffmpeg-bridge" }

# Cargo 不支持项目级默认 profile；让普通 build/run 采用 release 等价代码生成。
[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
