[package]
name = "camera-toolbox-adapters"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
camera-toolbox-app.workspace = true
camera-toolbox-core.workspace = true
sha2.workspace = true
socket2.workspace = true
thiserror.workspace = true
russh.workspace = true
russh-sftp.workspace = true
secrecy.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
