[package]
name = "camera-toolbox-adapters"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["platform-all"]
platform-all = ["platform-local", "platform-cv610", "platform-ssh"]
calibration-opencv = ["dep:opencv"]
platform-local = []
platform-cv610 = ["dep:sha2", "dep:socket2"]
platform-ssh = [
    "dep:directories",
    "dep:russh",
    "dep:russh-sftp",
    "dep:secrecy",
    "dep:serde_json",
    "dep:sha2",
    "dep:tokio",
    "dep:tokio-util",
]

[dependencies]
camera-toolbox-app.workspace = true
camera-toolbox-core.workspace = true
directories = { workspace = true, optional = true }
image.workspace = true
notify.workspace = true
sha2 = { workspace = true, optional = true }
opencv = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true }
thiserror.workspace = true
russh = { workspace = true, optional = true }
russh-sftp = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

[dev-dependencies]
sha2.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
