[package]
name = "camera-toolbox-app"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
camera-toolbox-core.workspace = true
thiserror.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
