[package]
name = "camera-toolbox-eeprom-helper"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
autobins = false

[[bin]]
name = "camera-toolbox-eeprom-helper"
path = "src/main.rs"

[dependencies]
camera-toolbox-app.workspace = true
camera-toolbox-core.workspace = true
serde_json.workspace = true
sha2.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
i2cdev.workspace = true

[lints]
workspace = true
