[package]
name = "camera-toolbox-logging"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
directories.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
