[package]
name = "camera-toolbox-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
camera-toolbox-adapters.workspace = true
camera-toolbox-app.workspace = true
camera-toolbox-core.workspace = true
camera-toolbox-logging.workspace = true
clap.workspace = true
tracing.workspace = true

[dev-dependencies]
camera-toolbox-tui = { path = "../tui" }

[lints]
workspace = true
