[package]
name = "camera-toolbox-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
autobins = false

[features]
default = ["platform-all"]
platform-all = ["platform-local", "platform-cv610", "platform-ssh"]
platform-local = ["camera-toolbox-adapters/platform-local"]
platform-cv610 = ["camera-toolbox-adapters/platform-cv610"]
platform-ssh = ["camera-toolbox-adapters/platform-ssh"]

[dependencies]
anyhow.workspace = true
camera-toolbox-adapters.workspace = true
camera-toolbox-app.workspace = true
camera-toolbox-core.workspace = true
camera-toolbox-logging.workspace = true
clap.workspace = true
tracing.workspace = true


[lints]
workspace = true
