[package]
name = "camera-toolbox-gui"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
camera-toolbox-adapters.workspace = true
camera-toolbox-app.workspace = true
camera-toolbox-core.workspace = true
camera-toolbox-logging.workspace = true
eframe.workspace = true
egui_plot.workspace = true
rfd.workspace = true
tracing.workspace = true

[lints]
workspace = true
