[package]
name = "camera-toolbox"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
autobins = false

[[bin]]
name = "camera-toolbox"
path = "src/main.rs"

[features]
default = ["platform-local"]
platform-local = [
    "camera-toolbox-adapters/platform-local",
    "camera-toolbox-cli/platform-local",
]
platform-cv610 = [
    "camera-toolbox-adapters/platform-cv610",
    "camera-toolbox-cli/platform-cv610",
]
platform-ssh = [
    "camera-toolbox-adapters/platform-ssh",
    "camera-toolbox-cli/platform-ssh",
    "dep:secrecy",
]

[dependencies]
anyhow.workspace = true
camera-toolbox-adapters.workspace = true
camera-toolbox-app.workspace = true
camera-toolbox-core.workspace = true
camera-toolbox-logging.workspace = true
camera-toolbox-cli = { path = "../cli", default-features = false }
clap.workspace = true
eframe.workspace = true
egui_plot.workspace = true
rfd.workspace = true
png.workspace = true
image.workspace = true
secrecy = { workspace = true, optional = true }
tracing.workspace = true

[lints]
workspace = true
