[package]
name = "camera-toolbox-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
camera-toolbox-adapters.workspace = true
camera-toolbox-app.workspace = true
camera-toolbox-core.workspace = true
camera-toolbox-logging.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tracing.workspace = true

[lints]
workspace = true
